--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
     ctx.lineWidth--;
   }
 
-};
+}
+canvas.addEventListener('mousedown', (e) => {
+  isDrawing = true;
+  [lastX, lastY] = [e.offsetX, e.offsetY];
+});
 </script>
 </body>
 </html>
