--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
   <title></title>
 </head>
 <body>
-    <canvas id="draw" width="800" height="800"></canvas>
+    <canvas id="draw" color="#ffffff"></canvas>
 <script>
   const canvas = document.querySelector('#draw');
   const ctx = canvas.getContext('2d');
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
+  canvas.width = '550';
+  canvas.height = '550';
+  canvas.color = '#ffffff';
   ctx.strokeStyle = '#FFFFFF';
   ctx.lineJoin = 'round';
   ctx.lineCap = 'round';
-  ctx.lineWidth = 100;
+  ctx.lineWidth = 20;
 
   let isDrawing = false;
   let lastX = 0;
@@ -36,7 +37,7 @@
   if (hue >= 360) {
     hue = 0;
   }
-  if (ctx.lineWidth >= 100 || ctx.lineWidth <= 1) {
+  if (ctx.lineWidth >= 20 || ctx.lineWidth <= 1) {
     direction = !direction;
   }
 
