--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title></title>
 </head>
 <body>
+    <header><h1>hello</h1></header>
     <canvas id="draw" color="#ffffff"></canvas>
 <script>
   const canvas = document.querySelector('#draw');
@@ -16,7 +17,7 @@
   ctx.strokeStyle = '#FFFFFF';
   ctx.lineJoin = 'round';
   ctx.lineCap = 'round';
-  ctx.lineWidth = 20;
+  ctx.lineWidth = 5;
 
   let isDrawing = false;
   let lastX = 0;
@@ -27,17 +28,17 @@
   function draw(e) {
   if (!isDrawing) return;
   console.log(e);
-  ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
+  ctx.strokeStyle = `hsl(${hue}, 0%, 0%)`;
   ctx.beginPath();
   ctx.moveTo(lastX, lastY);
   ctx.lineTo(e.offsetX, e.offsetY);
   ctx.stroke();
   [lastX, lastY] = [e.offsetX, e.offsetY];
   hue++;
-  if (hue >= 360) {
+  if (hue >= 0) {
     hue = 0;
   }
-  if (ctx.lineWidth >= 20 || ctx.lineWidth <= 1) {
+  if (ctx.lineWidth >= 5 || ctx.lineWidth <= 5) {
     direction = !direction;
   }
 
