Added step by step directions

--- a/index.html
+++ b/index.html
@@ -6,51 +6,51 @@
   <title></title>
 </head>
 <body>
-    <header><h1>Kodrawma!</h1>
+    <header><h1>D r <u>a</u> w - <u>a</u> - K o d <u>a</u> m <u>a</u> </h1>
     <h3>Click on a step to read directions!</h3></header>
     <div class="paneldiv">
     <div class="panels">
     <div class="panel panel1">
         <p></p>
         <p></p>
-        <p></p>
+        <p>draw a circle, doesn't have to be perfect!</p>
       </div>
       <div class="panel panel2">
         <p></p>
         <p></p>
-        <p>draw</p>
+        <p>Add two solid cirlces for eyes</p>
       </div>
       <div class="panel panel3">
         <p></p>
-        <p>hi</p>
         <p></p>
+        <p>Add another solid circle for mouth</p>
       </div>
       <div class="panel panel4">
         <p></p>
-        <p>hi</p>
         <p></p>
+        <p>Draw a little line for nose</p>
       </div>
     </div>
     <div class="panels">
     <div class="panel panel5">
+        <p>Draw two curved lines under the head</p>
         <p></p>
-        <p>hi</p>
         <p></p>
       </div>
       <div class="panel panel6">
+        <p>Draw a big 'M' inside the curved lines</p>
         <p></p>
-        <p>hi</p>
         <p></p>
       </div>
       <div class="panel panel7">
+        <p>Draw two lines coming off the top of the 'M'</p>
         <p></p>
-        <p>hi</p>
         <p></p>
       </div>
       <div class="panel panel8">
+        <p>Draw some squiggles for fingers & toes</p>
         <p></p>
-        <p>hi</p>
-        <p></p>
+        <p>All done!</p>
       </div>
     </div>
   </div>
