--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         <p></p>
       </div>
       <div class="panel panel6">
-        <p>Draw a big 'M' inside the curved lines</p>
+        <p>Draw a sloppy 'M' inside the lines</p>
         <p></p>
         <p></p>
       </div>
       <div class="panel panel7">
-        <p>Draw two lines coming off the top of the 'M'</p>
+        <p>Draw two lines off the top of the 'M'</p>
         <p></p>
         <p></p>
       </div>
       <div class="panel panel8">
-        <p>Draw some squiggles for fingers & toes</p>
+        <p>Draw some squiggly fingers & toes!</p>
         <p></p>
-        <p>All done!</p>
+        <p></p>
       </div>
     </div>
   </div>
