--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header><h1>D r <u>a</u> w - <u>a</u> - K o d <u>a</u> m <u>a</u> </h1></header>
-    <h3>Click on a step to read directions!</h3>
+    <h2>Draw here!</h2><h3>Click on a step to read directions!</h3>
     <div class="paneldiv">
     <div class="panels">
     <div class="panel panel1">
